Fixed flexbox (sorta) alignment. Made drop-down selector easier to access and centered content.

--- a/css/styles.css
+++ b/css/styles.css
@@ -18,8 +18,6 @@ ul, li {
 	font-family: Arial, Helvetica, sans-serif;
 	font-size: 10pt;
   color: #333;
-  display: flex;
-  flex-wrap: wrap;
   
 }
 
@@ -110,21 +108,21 @@ nav h1 a {
 }
 /* ====================== Restaurant Filtering ====================== */
 .filter-options {
+  background-color: rgb(158, 158, 158);
   display: block;
   font-weight: bold;
-  width: 100%;
-  height: 1.5em;
+  font-size:1.5em;
+  max-width: 100%;
   margin:3%;
   margin-top:0%;
   margin-bottom:3.5%;
-  transform: translate(32%,0%);
 }
 .filter-options h2 {
   color: white;
   font-size: 1.5em;
   font-weight: bold;
   margin-bottom: -.4%;
-  margin-left:10.2%;
+  margin-left:44%;
 }
 .filter-options select {
   background-color: white;
@@ -134,28 +132,38 @@ nav h1 a {
   font-size:1.5em;
   padding: .4%;
   margin:.5%;
+  
 }
+.filter-options #neighborhoods-select{
+  margin-left:30%;
+
+}
+
 
 /* ====================== Restaurant Listing ====================== */
 #restaurants-list {
-  background-color: #919090;
   list-style: outside none none;
   text-align: center;
-  
+  display: flex;
+  flex-wrap: wrap;
+  justify-items: center;
+  justify-content: center;
+  margin-right:2%;
 }
 #restaurants-list li {
-  display: block;
   border-radius: 15px 15px 15px 0px;
   background-color: #fff;
   border: 2px solid #ccc;
   font-family: Arial,sans-serif;
-  width:calc((100% - 60px) / 4);
   text-align: center;
-  margin-right:.5%;
-  margin-top:.5%;
-  margin-bottom:1%;
+  width:calc((100% - 100px)/4);
+  margin-right:1%;
+  margin-bottom: 1%;
+  align-items:center;
+  justify-content: center;
   
 }
+
 #restaurants-list li h1 {
   color: #0e0b08;
   font-family: Arial,sans-serif;
@@ -167,8 +175,8 @@ nav h1 a {
   max-width:100%;
   order:0;
   text-align: center;
-  margin:2.5%;
-  margin-top:10%;
+  margin:.5%;
+  margin-top:4%;
   overflow: hidden;
   text-overflow: ellipsis;
   white-space: nowrap;
@@ -187,7 +195,7 @@ nav h1 a {
   font-weight: bold;
   letter-spacing: 0;
   line-height: 1.3;
-  margin-top:4%;
+  margin-top:1%;
   text-transform: uppercase;
   width:100%;
   order:2;
@@ -195,7 +203,9 @@ nav h1 a {
 #restaurants-list p {
   font-size: 1.5em;
   order:2;
-  margin: 5%;
+  margin: 2%;
+  margin-top:-4%;
+  margin-bottom:10%;
   font-weight: bold;
   overflow: hidden;
   text-overflow: ellipsis;
@@ -207,7 +217,6 @@ nav h1 a {
   color: #fff;
   display: inline-block;
   font-size: 1em;
-  margin: 15px 0 0;
   padding: 8px 30px 10px;
   text-align: center;
   text-decoration: none;
@@ -215,6 +224,10 @@ nav h1 a {
   order:3;
 }
 
+#restaurants-list ul{
+  padding-left:-1999;
+  margin-left:-20%;
+}
 
 /* ====================== Restaurant Details ====================== */
 .inside header {
